# ChemFH

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  environment.yml  pyproject.toml  requirements.txt
ChemFH/: settings.py  urls.py
service/: api.py  views.py
service/utils/: handle_mol.py  pretreatutil.py
static/media/rule/substructure_filter/: __init__.py  check_substructure.py  load_pattern.py  visualization.py
