[project]
name = "chemfh"
version = "0.1.0"
description = "ChemFH - Frequent Hitter Detection Tool"
authors = [{ name = "Computational Modeling", email = "cm@montai.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "setuptools>=68.0.0,<81",
    "numpy==1.26.3",
    "pandas==2.2.0",
    "scipy==1.12.0",
    "scikit-learn==1.4.0",
    "django==4.2.9",
    "django-cors-headers==4.3.1",
    "django-ninja==1.1.0",
    "rdkit==2023.9.4",
    "chemprop==1.6.1",
    "torch==2.2.0",
    "biopython==1.83",
    "descriptastorus==2.6.1",
    "matplotlib==3.8.2",
    "pillow==10.2.0",
    "cairosvg==2.7.1",
    "cairocffi==1.6.1",
    "pycirclize==1.2.0",
    "reportlab==4.0.9",
    "hyperopt==0.2.7",
    "tensorboardx==2.6.2.2",
    "sympy==1.12",
    "requests==2.31.0",
    "tqdm==4.66.1",
    "pydantic==2.6.0",
    "jinja2==3.1.3",
    "werkzeug==3.0.1",
    "gunicorn>=21.0.0",
    "whitenoise>=6.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ChemFH", "service", "home"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
exclude = ["."]
